# f2_formats

./: .gitignore  Cargo.toml
f2_common_format/: Cargo.toml
f2_common_format/src/: fid.rs  lib.rs  reader.rs  sniffer.rs
f2_map_converter/: Cargo.toml
f2_map_converter/src/: ignore.rs  lib.rs  main.rs
f2_map_format/: Cargo.toml
f2_map_format/src/: header.rs  lib.rs  scripts.rs  tiles.rs  variables.rs
f2_map_format/src/objects/: item.rs  misc.rs  mod.rs  scenery.rs
f2_proto_format/: Cargo.toml
f2_proto_format/src/: lib.rs
f2_proto_format/src/proto/: critter.rs  misc.rs  mod.rs  scenery.rs  tile.rs  wall.rs
f2_proto_format/src/proto/item/: drug.rs  mod.rs  weapon.rs
