[workspace]
resolver = "2"
members = ["f2_common_format",  "f2_map_format",  "f2_proto_format", "f2_map_converter"]

[workspace.dependencies]
f2_common_format = { path = "./f2_common_format" }
f2_map_format = { path = "./f2_map_format" }
f2_proto_format = { path = "./f2_proto_format" }

represent = { git = "https://github.com/qthree/represent.git", commit = "399a6b0539da68eb6e0bd15e41ba8b5241810a05", features = ["derive"] }
represent_extra = { git = "https://github.com/qthree/represent.git", commit = "399a6b0539da68eb6e0bd15e41ba8b5241810a05" }

bytemuck = { version = "1", features = ["min_const_generics"] }
bytes = "1"
env_logger = "0.11"
hashbrown = "0.14"
log = "0.4"
num_enum = "0.7"
serde = "1"
serde-big-array = "0.5"
serde_json = "1"
walkdir = "2"

[patch."https://github.com/qthree/represent.git"]
#represent = { path = "../represent" }
#represent_extra = { path = "../represent/extra" }
