[package]
name = "f2_common_format"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
represent = { path = "../fo_network/represent" }
represent_derive = { path = "../fo_network/represent_derive" }
num_enum = "0.7"
fo_net_protocol = { path = "../fo_network/net_protocol" }
bytes = "1"
bytemuck = { version = "1", features = ["min_const_generics"] }
