[package]
name = "f2_map_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
f2_common_format = { path = "../f2_common_format" }
f2_map_format = { path = "../f2_map_format" }
f2_proto_format = { path = "../f2_proto_format" }
hashbrown = "0.14"
walkdir = "2"