[package]
name = "f2_map_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
f2_common_format.workspace = true
f2_map_format.workspace = true
f2_proto_format.workspace = true

hashbrown.workspace = true
walkdir.workspace = true
